# ocaml-api-watch

./: .git-blame-ignore-revs  .gitignore  .gitmodules  CHANGES.md  CONTRIBUTING.md  LICENSE.md  README.md  api-watch.opam  api-watch.opam.template  dune-project
cmdliner-1.2.0/: cmdliner.opam
cmdliner-1.2.0/pkg/: META
cmdliner-1.2.0/test/: chorus.ml  cp_ex.ml  darcs_ex.ml  rm_ex.ml  tail_ex.ml  test_man.ml
dev-tools/: dune  print_api.ml  print_cmi.ml
lib/: api_watch.ml  api_watch.mli  api_watch_diff.ml  api_watch_diff.mli  convert.ml  convert.mli  diff.ml  diff.mli  dune  intermed.ml  intermed.mli  library.ml  library.mli  normalize.ml  normalize.mli  ocaml_types.ml  sig_item_map.ml  sig_item_map.mli  stddiff.ml  stddiff.mli  string_map.mli  test_helpers.ml  test_helpers.mli  text_diff.ml  text_diff.mli  typing_env.ml  typing_env.mli  util.ml  util.mli
tests/api-diff/: alias_types_tests.t  arrow_tests.t  class_detection.t  cltype_tests.t  dune  env_across_modules.t  errors.t  extension_constructors.t  fine_grained_type_expr.t  identical_cmi.t  modified_variant_type_tests.t  module_tests.t  module_type_test.t  module_type_vs_module_alias.t  parametrized_types_tests.t  project_comparison.t  record_type_tests.t  run.t  stack_overflow.t  stdlib.t  test_diffing_across_modules.t  tuple_tests.t  type_expansion.t  type_kind_tests.t  type_manifest_tests.t  type_privacy_tests.t  type_tests.t  value_tests.t  word_based_diff_tests.t
tests/api-watch/: dune  run.t  stdlib.ml  test.ml  test_diff.ml  test_diff_class.ml  test_diff_class_type_decl.ml  test_diff_cltype.ml  test_diff_modtpe_decl.ml  test_diff_module.ml  test_expand_tconstr.ml  test_expansion_lst.ml  test_fully_expand_type_expr.ml  test_module.ml  test_normalize.ml  test_subst_params.ml  test_text_diff.ml
tests/api-watch-diff/: dune  test.ml  test_module.ml
tests/data/: add_type.ml  dune  identical.ml
tests/library-loading/: dune  rewrite-alias.t
tests/test_helpers/: dune  test_helpers.ml  test_helpers.mli
