opam-version: "2.0"
synopsis: "Libraries and tools to keep watch on your OCaml lib's API changes"
maintainer: ["Nathan Rebours <nathan.p.rebours@gmail.com>"]
authors: ["Nathan Rebours <nathan.p.rebours@gmail.com>"]
license: "ISC"
homepage: "https://github.com/NathanReb/ocaml-api-watch"
bug-reports: "https://github.com/NathanReb/ocaml-api-watch/issues"
depends: [
  "dune" {>= "2.7"}
  "ocaml" {>= "5.1.0" & < "5.2.0"}
  "ppx_expect" {with-test}
  "logs"
  "cmdliner" {>= "1.1.0"}
  "odoc" {with-doc}
  "diffutils"
]
pin-depends: [
  ["diffutils.dev" "git+https://github.com/panglesd/ocaml-diffutils.git#0fc293bc0cd2c34742552f7a0c777bfba385bd90"]
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/NathanReb/ocaml-api-watch.git"
