(library
 (name ref)
 (modules ref))

(library
 (name identical)
 (modules identical))

(library
 (name add_type)
 (modules add_type))

(library
 (name add_val)
 (modules add_val))

(library
 (name modify_type)
 (modules modify_type))

(library
 (name modify_val)
 (modules modify_val))

(library
 (name remove_type)
 (modules remove_type))

(library
 (name remove_val)
 (modules remove_val))
